crates/cairo-lang-parser/src/parser_test_data/diagnostics/unterminated_string
//! > Test missing closing short string token

//! > test_runner_name
get_diagnostics

//! > cairo_code
fn f() {
   let unterminated_str = 'abc;
}

//! > expected_diagnostics
error[E0001]: Unterminated short string literal.
 --> dummy_file.cairo:2:27
   let unterminated_str = 'abc;
                          ^***^

error[E0001]: Missing token TerminalSemicolon.
 --> dummy_file.cairo:3:2
}
 ^

error[E0001]: Missing token TerminalRBrace.
 --> dummy_file.cairo:3:2
}
 ^

//! > ==========================================================================

//! > Test missing closing string token

//! > test_runner_name
get_diagnostics

//! > cairo_code
fn f() {
   let unterminated_str = "abc;
}

//! > expected_diagnostics
error[E0001]: Unterminated string literal.
 --> dummy_file.cairo:2:27
   let unterminated_str = "abc;
                          ^***^

error[E0001]: Missing token TerminalSemicolon.
 --> dummy_file.cairo:3:2
}
 ^

error[E0001]: Missing token TerminalRBrace.
 --> dummy_file.cairo:3:2
}
 ^
